--- a/src/globals.css
+++ b/src/globals.css
@@ -132,7 +132,10 @@ body {
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
 }
+
+/**/
